paired ipynb with py using jupytext

--- a/notebooks-py/b-01-normal-prob-plot.ipynb
+++ b/notebooks-py/b-01-normal-prob-plot.ipynb
@@ -4,134 +4,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Normal probability plots\n",
+    "# Plot a normal probability plot\n",
     "\n",
-    "**date**\n",
-    ": 2021-04-10\n",
+    "date: 2021-04-10\n",
     "\n",
-    "**language**\n",
-    ": `Py`\n",
+    "aim: Plot a normal probability plot of some data\n",
     "\n",
-    "**packages**\n",
-    ": `scipy`\n",
+    "reference: M248 Computer book B, Activity 8\n",
     "\n",
-    "**data**\n",
-    ": `plasma.csv`\n",
+    "data: plasma.csv\n",
     "\n",
-    "**ref**\n",
-    ": Computer book B, Activity 8\n",
+    "description: Level of blood pasma nicotine levels of 55 smokers\n",
     "\n",
-    "**desc**\n",
-    ": Plot a normal probability plot of some data."
+    "module: `scipy.stats.probplot`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import the modules"
+    "## Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import src.load as load\n",
+    "# import packages\n",
+    "from __future__ import annotations\n",
+    "from src import load\n",
     "from scipy.stats import probplot\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Import the data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load data\n",
-    "sample = load.plasma()"
+    "plasma = load.plasma()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Describe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Level</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>311</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>242</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>474</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>375</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Level\n",
-       "0    123\n",
-       "1    311\n",
-       "2    242\n",
-       "3    474\n",
-       "4    375"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# preview data\n",
-    "sample.head()"
+    "# inspect the data\n",
+    "plasma.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# summarise the data\n",
+    "plasma.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the data\n",
+    "sns.histplot(data=plasma, x=\"Level\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -1226,134 +1180,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function probplot in module scipy.stats.morestats:\n",
-      "\n",
-      "probplot(x, sparams=(), dist='norm', fit=True, plot=None, rvalue=False)\n",
-      "    Calculate quantiles for a probability plot, and optionally show the plot.\n",
-      "    \n",
-      "    Generates a probability plot of sample data against the quantiles of a\n",
-      "    specified theoretical distribution (the normal distribution by default).\n",
-      "    `probplot` optionally calculates a best-fit line for the data and plots the\n",
-      "    results using Matplotlib or a given plot function.\n",
-      "    \n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    x : array_like\n",
-      "        Sample/response data from which `probplot` creates the plot.\n",
-      "    sparams : tuple, optional\n",
-      "        Distribution-specific shape parameters (shape parameters plus location\n",
-      "        and scale).\n",
-      "    dist : str or stats.distributions instance, optional\n",
-      "        Distribution or distribution function name. The default is 'norm' for a\n",
-      "        normal probability plot.  Objects that look enough like a\n",
-      "        stats.distributions instance (i.e. they have a ``ppf`` method) are also\n",
-      "        accepted.\n",
-      "    fit : bool, optional\n",
-      "        Fit a least-squares regression (best-fit) line to the sample data if\n",
-      "        True (default).\n",
-      "    plot : object, optional\n",
-      "        If given, plots the quantiles and least squares fit.\n",
-      "        `plot` is an object that has to have methods \"plot\" and \"text\".\n",
-      "        The `matplotlib.pyplot` module or a Matplotlib Axes object can be used,\n",
-      "        or a custom object with the same methods.\n",
-      "        Default is None, which means that no plot is created.\n",
-      "    \n",
-      "    Returns\n",
-      "    -------\n",
-      "    (osm, osr) : tuple of ndarrays\n",
-      "        Tuple of theoretical quantiles (osm, or order statistic medians) and\n",
-      "        ordered responses (osr).  `osr` is simply sorted input `x`.\n",
-      "        For details on how `osm` is calculated see the Notes section.\n",
-      "    (slope, intercept, r) : tuple of floats, optional\n",
-      "        Tuple  containing the result of the least-squares fit, if that is\n",
-      "        performed by `probplot`. `r` is the square root of the coefficient of\n",
-      "        determination.  If ``fit=False`` and ``plot=None``, this tuple is not\n",
-      "        returned.\n",
-      "    \n",
-      "    Notes\n",
-      "    -----\n",
-      "    Even if `plot` is given, the figure is not shown or saved by `probplot`;\n",
-      "    ``plt.show()`` or ``plt.savefig('figname.png')`` should be used after\n",
-      "    calling `probplot`.\n",
-      "    \n",
-      "    `probplot` generates a probability plot, which should not be confused with\n",
-      "    a Q-Q or a P-P plot.  Statsmodels has more extensive functionality of this\n",
-      "    type, see ``statsmodels.api.ProbPlot``.\n",
-      "    \n",
-      "    The formula used for the theoretical quantiles (horizontal axis of the\n",
-      "    probability plot) is Filliben's estimate::\n",
-      "    \n",
-      "        quantiles = dist.ppf(val), for\n",
-      "    \n",
-      "                0.5**(1/n),                  for i = n\n",
-      "          val = (i - 0.3175) / (n + 0.365),  for i = 2, ..., n-1\n",
-      "                1 - 0.5**(1/n),              for i = 1\n",
-      "    \n",
-      "    where ``i`` indicates the i-th ordered value and ``n`` is the total number\n",
-      "    of values.\n",
-      "    \n",
-      "    Examples\n",
-      "    --------\n",
-      "    >>> from scipy import stats\n",
-      "    >>> import matplotlib.pyplot as plt\n",
-      "    >>> nsample = 100\n",
-      "    >>> np.random.seed(7654321)\n",
-      "    \n",
-      "    A t distribution with small degrees of freedom:\n",
-      "    \n",
-      "    >>> ax1 = plt.subplot(221)\n",
-      "    >>> x = stats.t.rvs(3, size=nsample)\n",
-      "    >>> res = stats.probplot(x, plot=plt)\n",
-      "    \n",
-      "    A t distribution with larger degrees of freedom:\n",
-      "    \n",
-      "    >>> ax2 = plt.subplot(222)\n",
-      "    >>> x = stats.t.rvs(25, size=nsample)\n",
-      "    >>> res = stats.probplot(x, plot=plt)\n",
-      "    \n",
-      "    A mixture of two normal distributions with broadcasting:\n",
-      "    \n",
-      "    >>> ax3 = plt.subplot(223)\n",
-      "    >>> x = stats.norm.rvs(loc=[0,5], scale=[1,1.5],\n",
-      "    ...                    size=(nsample//2,2)).ravel()\n",
-      "    >>> res = stats.probplot(x, plot=plt)\n",
-      "    \n",
-      "    A standard normal distribution:\n",
-      "    \n",
-      "    >>> ax4 = plt.subplot(224)\n",
-      "    >>> x = stats.norm.rvs(loc=0, scale=1, size=nsample)\n",
-      "    >>> res = stats.probplot(x, plot=plt)\n",
-      "    \n",
-      "    Produce a new figure with a loggamma distribution, using the ``dist`` and\n",
-      "    ``sparams`` keywords:\n",
-      "    \n",
-      "    >>> fig = plt.figure()\n",
-      "    >>> ax = fig.add_subplot(111)\n",
-      "    >>> x = stats.loggamma.rvs(c=2.5, size=500)\n",
-      "    >>> res = stats.probplot(x, dist=stats.loggamma, sparams=(2.5,), plot=ax)\n",
-      "    >>> ax.set_title(\"Probplot for loggamma dist with shape parameter 2.5\")\n",
-      "    \n",
-      "    Show the results with Matplotlib:\n",
-      "    \n",
-      "    >>> plt.show()\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "help(probplot)"
+    "## Commentary\n",
+    "\n",
+    "The points lie roughly along a straight-line.\n",
+    "This suggests a normal model is plausible for the blood plasma nicotine levels of smokers."
    ]
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py:percent"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
