--- a/notebooks-py/b-02-t-interval-normal-mean.ipynb
+++ b/notebooks-py/b-02-t-interval-normal-mean.ipynb
@@ -4149,10 +4149,12 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,py:percent"
+   "formats": "ipynb,py:percent",
+   "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.3 64-bit",
+   "display_name": "Python 3.8.2 64-bit",
+   "language": "python",
    "name": "python38264bit42cc30f2071844968108c09d90e27cee"
   },
   "language_info": {
