--- a/notebooks-py/b-05-mann-whitney.ipynb
+++ b/notebooks-py/b-05-mann-whitney.ipynb
@@ -6,27 +6,20 @@
    "source": [
     "# Mann-Whitney test\n",
     "\n",
-    "**date:** 2021-04-17\n",
+    "**date** : 2021-04-17\n",
     "\n",
-    "**aim:** Perform a **Mann-Whitney Test** using data with two independent variables.\n",
+    "**aim** : Perform a **Mann-Whitney Test**.\n",
     "\n",
-    "**reference:** M248 Computer book B, Activity 37 (*amended*)\n",
+    "**reference:** M248, Computer book B, chapter 11\n",
     "\n",
-    "**data:** `dopamine.csv`\n",
-    "\n",
-    "**description:** (See *hypotheses*)\n",
-    "\n",
-    "**module:** `scipy.stats.mannwhitneyu`\n",
-    "\n",
-    "**notes:** `\"two-sided\"` should be passed as the actual argument for `alternative`, given the default is `None`.\n",
-    "We can return values unadjusted for ties by passing `True` as an actual argument for `use_continuity`."
+    "**packages** : `scipy`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup"
+    "## 1. Setup the notebook"
    ]
   },
   {
@@ -35,10 +28,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from setup import load\n",
+    "from src import load\n",
     "from scipy.stats import mannwhitneyu\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. The Mann-Whitney test\n",
+    "\n",
+    "**aim** : Test the hypothesis $H_{0} : \\ell = 0, \\> \\ell \\neq 0$, where $\\ell$ is the underlying population difference in location between the patients deemed psychotic and those deemed non-psychotic. (See description.)\n",
+    "\n",
+    "**reference** : activity 37 (*amended*)\n",
+    "\n",
+    "**data:** dopamine.csv\n",
+    "\n",
+    "**description:** Data on the dopamine $\\beta$-hydroxylase enzyme activity in samples of cerebro-spinal fluid (in **nmol/(ml)(h)/mg**) taken from 25 hospitalised patients with schizophrenia who were treated with antipsychotic medication, who after a period of time were classified as either psychotic or non-psychotic by hospital staff."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Import the data"
    ]
   },
   {
@@ -66,226 +81,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hypotheses\n",
-    "\n",
-    "In a study into the causes of schizophrenia, 25 hospitalised patients with schizophrenia were treated with antipsychotic medication, and after a period of time were classified as psychotic or non-psychotic by hospital staff.\n",
-    "A sample of cerebro-spinal fluid was taken from each patient and tested for dopamine $\\beta$-hydroxylase enzyme activity.\n",
-    "The measurements are in unit **nmol/(ml)(h)/mg** of protein.\n",
-    "\n",
-    "Let the hypotheses be\n",
-    "\n",
-    "$$\n",
-    "H_{0} : \\ell = 0, \\hspace{3mm} \\ell \\neq 0,\n",
-    "$$\n",
-    "\n",
-    "where $\\ell$ is the underlying difference between the locations the populations where the samples were drawn."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Preview the data"
+    "### 2.2 Visualise the data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Psychotic</th>\n",
-       "      <th>Non-psychotic</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0150</td>\n",
-       "      <td>0.0104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0204</td>\n",
-       "      <td>0.0105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0208</td>\n",
-       "      <td>0.0112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0222</td>\n",
-       "      <td>0.0116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0226</td>\n",
-       "      <td>0.0130</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Psychotic  Non-psychotic\n",
-       "0     0.0150         0.0104\n",
-       "1     0.0204         0.0105\n",
-       "2     0.0208         0.0112\n",
-       "3     0.0222         0.0116\n",
-       "4     0.0226         0.0130"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dopamine.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Summarise the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Psychotic</th>\n",
-       "      <th>Non-psychotic</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>15.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>0.024260</td>\n",
-       "      <td>0.016427</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.005140</td>\n",
-       "      <td>0.004696</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.015000</td>\n",
-       "      <td>0.010400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>0.021150</td>\n",
-       "      <td>0.012300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>0.023550</td>\n",
-       "      <td>0.015600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>0.027375</td>\n",
-       "      <td>0.020000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>0.032000</td>\n",
-       "      <td>0.025200</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Psychotic  Non-psychotic\n",
-       "count  10.000000      15.000000\n",
-       "mean    0.024260       0.016427\n",
-       "std     0.005140       0.004696\n",
-       "min     0.015000       0.010400\n",
-       "25%     0.021150       0.012300\n",
-       "50%     0.023550       0.015600\n",
-       "75%     0.027375       0.020000\n",
-       "max     0.032000       0.025200"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dopamine.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Visualise the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,12 +112,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.3 Perform the Mann-Whitney test\n",
+    "\n",
+    "Note that `\"two-sided\"` should be passed as the actual argument for `alternative`, given the default is `None`.\n",
+    "We can return values unadjusted for ties by passing `True` as an actual argument for `use_continuity`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Calculations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +136,7 @@
        "MannwhitneyuResult(statistic=130.0, pvalue=0.0024970589395120965)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,6 +147,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,auto:percent"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
