--- a/notebooks-py/b-06-chi-sq-goodness-of-fit.ipynb
+++ b/notebooks-py/b-06-chi-sq-goodness-of-fit.ipynb
@@ -6,26 +6,18 @@
    "source": [
     "# Chi-square goodness-of-fit test\n",
     "\n",
-    "**date:** 2021-04-18\n",
+    "**date** : 2021-04-18\n",
     "\n",
-    "**aim:** Perform a **chi-squared goodness-of-fit test.**\n",
+    "**aim** : Perform a **chi-square** goodness-of-fit test.\n",
     "\n",
-    "**reference:** **N/A**\n",
-    "\n",
-    "**data:** `uniform_goal.csv`\n",
-    "\n",
-    "**description:** (See *hypotheses*)\n",
-    "\n",
-    "**note**\n",
-    ": Formal argument `ddof` is the *delta degrees of freedom*.\n",
-    "Actual argumnet would be the number of estimated parameters."
+    "**reference** : N/A"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup"
+    "## 1. Setup the notebook"
    ]
   },
   {
@@ -34,10 +26,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from setup import load\n",
+    "from src import load\n",
     "from scipy.stats import chisquare\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Chi-square goodness-of-fit test\n",
+    "\n",
+    "**aim** : Analyse whether it is reasonable to claim that the total number of goals scored per ten minute period in a football game is unifomally distributed across all nine periods.\n",
+    "\n",
+    "**data** : uniform_goal.csv\n",
+    "\n",
+    "**description** : Data on the total number of goals scored per ten minute period in an English Premier League football season in normal time in season 18-19."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Import the data"
    ]
   },
   {
@@ -65,153 +77,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hypotheses\n",
-    "\n",
-    "Data has been provided showing the total number of goals scored per ten minute period in an English Premier League football season in normal time.\n",
-    "It has been proposed that a discrete uniform distribution would be a good model for the data.\n",
-    "We will perform a chi-squared goodness-of-fit test to confirm the proposal."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Preview the data"
+    "### 2.2 Visualise the data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>group</th>\n",
-       "      <td>0-10</td>\n",
-       "      <td>10-20</td>\n",
-       "      <td>20-30</td>\n",
-       "      <td>30-40</td>\n",
-       "      <td>40-50</td>\n",
-       "      <td>50-60</td>\n",
-       "      <td>60-70</td>\n",
-       "      <td>70-80</td>\n",
-       "      <td>80-90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>obs</th>\n",
-       "      <td>82</td>\n",
-       "      <td>116</td>\n",
-       "      <td>108</td>\n",
-       "      <td>98</td>\n",
-       "      <td>95</td>\n",
-       "      <td>112</td>\n",
-       "      <td>133</td>\n",
-       "      <td>119</td>\n",
-       "      <td>115</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          0      1      2      3      4      5      6      7      8\n",
-       "group  0-10  10-20  20-30  30-40  40-50  50-60  60-70  70-80  80-90\n",
-       "obs      82    116    108     98     95    112    133    119    115"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "goals.T"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Summarise the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count      9.000000\n",
-       "mean     108.666667\n",
-       "std       15.066519\n",
-       "min       82.000000\n",
-       "25%       98.000000\n",
-       "50%      112.000000\n",
-       "75%      116.000000\n",
-       "max      133.000000\n",
-       "Name: obs, dtype: float64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obs.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Visualise the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,12 +107,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculations"
+    "### 2.3 Perform the test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +121,7 @@
        "Power_divergenceResult(statistic=16.71165644171779, pvalue=0.033255616570006946)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,6 +134,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 2.4 Plot the results of the test\n",
+    "\n",
     "Plot a side-by-side bar chart showing the **observed** and **expected** number of goals.\n",
     "\n",
     "Expected number of goals is **n Pr,** here **n** is the total number of goals scored in the observatation, and **Pr** is the probability of a goals being scored in a particular group.\n",
@@ -272,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -331,11 +204,15 @@
    "source": [
     "## Discussion\n",
     "\n",
-    "Give that $p \\in (0.01, 0.05]$, there is moderate evidence against the null hypothesis that the distribution of goals across the 90 minutes of a football match are uniformally distributed."
+    "Give that $p \\in (0.01, 0.05]$, there is moderate evidence against the null hypothesis that the distribution of goals across the 90 minutes of a football match are uniformally distributed.\n",
+    "There is moderate evidence to support the claim that the total number of goals scored per ten minute period in an EPL football game are not uniformally distributed."
    ]
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,auto:percent"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
